--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.thanglequoc</groupId>
+      <artifactId>aqi-calculator</artifactId>
+      <version>1.3.1</version>
+    </dependency>
   </dependencies>
 
   <build>
