--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>aqi-calculator</artifactId>
       <version>1.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.3</version>
+    </dependency>
   </dependencies>
 
   <build>
