Update junit version, reformat .gitignore, and add sample json data for a single reading

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-/target/
-/.classpath
-/.settings/
-/.project
+**/.DS_Store
+
+# building
+target
+
+# Eclipse
+.classpath
+.project
+.settings
+
+# IDEA
+.idea
+*.iml
+*.ipr
+*.iws
+/target
